# Thunder-LLM-Toolkit

./: .gitignore  .gitmodules  Beta.patch  Readme.md  ThunderTok.patch  esaxx-pub.patch  pyproject.toml  setup.py
examples/: .gitignore  evaluate.sh
examples/chat/: .gitignore  run_cli.sh
examples/dataset/: loader.py  precessing.py  tokenizing.py
examples/inference/: .gitignore  eval_humaneval.py  run_cli.sh  run_lmeval_reference.sh
examples/training/: arguments.py  driver.sh  generate_post_training_dataset.py  train.py
misc/: hf_to_te_model.py  te_model_to_hf.py  zero_to_fp32.py
misc/c4-data-sampling/: main.py
misc/inference_testlist/: README.md  run_tests.sh  testlist.txt
misc/pytorch-hgemm-fix/: pytorch2.4.0-fp16gemm-fix.patch  pytorch_fp16_bench.py
tests/inference/: Readme.md  test_cli.py  test_evaluator.py  test_include_path.py  test_janitor.py  test_misc.py  test_requests_caching.py  test_tasks.py  test_utils.py  utils.py
tests/inference/models/: test_api.py  test_gguf.py  test_huggingface.py  test_neuralmagic.py  test_neuron_optimum.py  test_openvino.py  test_vllm.py
tests/model/: test_hf_model.py
thunderllm/: __init__.py  chat_arguments.py  chat_main.py  common_argument.py  eval_arguments.py  evaluate_main.py  model_setup.py
thunderllm/dataloader/: dataloader.py  torch_dataloader.py
thunderllm/dataset/: README.md  dataset.py  dataset_modules.py
thunderllm/dataset/io/: json.py  parquet.py
thunderllm/dataset/processing/: __init__.py  processor.py
thunderllm/distributed/: __init__.py  deepspeed_util.py  distributed_util.py  initialize.py  process_grid.py
thunderllm/generation/: __init__.py  generator.py  greedy.py  sampling.py  stop_criteria.py  template.py
thunderllm/inference/: Readme.md  __init__.py  __main__.py  evaluator.py  evaluator_utils.py  utils.py
thunderllm/inference/api/: filter.py  group.py  instance.py  metrics.py  model.py  registry.py  task.py
thunderllm/inference/caching/: cache.py
thunderllm/inference/decontamination/: decontaminate.py  janitor.py
thunderllm/inference/filters/: __init__.py  custom.py  decontamination.py  extraction.py  (+2 more)
thunderllm/model/: __init__.py  hf_generic.py  hf_model.py  llm_interface.py  llm_models.py  te_model.py
thunderllm/tokenizer/: custom_tokenizer.py  hf_tokenizer.py  tokenizer.py
thunderllm/training/: optimizer.py
thunderllm/util/: __init__.py  checkpoint.py  cuda_util.py  logger.py  loss.py
(+354 files in other folders)
